fix overflow on small devices

--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -252,18 +252,18 @@ ul.list {
     }
 }
 .nav-link, .nav-button {
-    @apply text-white font-medium rounded-md text-lg px-4 py-5 w-full md:w-auto text-left;
+    @apply text-white font-medium rounded-md sm:text-lg text-sm xl:text-base px-4 py-5 w-full md:w-auto text-left;
     &:hover {
         @apply text-yellow-400 bg-gray-600;
     }
 }
 .nav-button {
-    @apply text-white focus:ring-2 focus:ring-yellow-300 font-medium rounded-md text-lg px-4 py-5 inline-flex items-center w-full md:w-auto flex-row-reverse md:flex-row;
+    @apply text-white focus:ring-2 focus:ring-yellow-300 font-medium rounded-md px-4 py-5 inline-flex items-center w-full md:w-auto flex-row-reverse md:flex-row;
     @apply justify-start;
 }
 
 .nav-dropdown {
-    @apply z-10 text-lg bg-gray-500 md:text-base list-none rounded divide-y divide-gray-100 shadow dark:bg-gray-700 md:w-52;
+    @apply z-10 bg-gray-500 text-base list-none rounded divide-y divide-gray-100 shadow dark:bg-gray-700 md:w-52;
     width: 90vw;
     left: 5px;
 
@@ -274,7 +274,7 @@ ul.list {
 }
 
 .nav-link {
-    @apply block;
+    @apply block text-right;
 }
 
 #dropdown {
